# indicator-memory

./: .cirrus.yml  .gitignore  CMakeLists.txt  LICENSE.md  README.md
data/: indicator-memory.desktop
debian/: changelog  control  copyright
src/: indicator-memory.c
